color contrast fixs

--- a/webpages/styles/colors.css
+++ b/webpages/styles/colors.css
@@ -19,13 +19,13 @@
   --white-text: #fff;
 
   --page-background: #1c1c1c;
-  --content-background: #222222;
+  --content-background: #252525;
   --navigation-background: #333;
   --search-toolbar-background: #1b1b1b;
   --button-background: #1c1c1c;
   --button-hover-background: #1a1a1a;
   --input-background: #222;
-  --search-input-background: #222222;
+  --search-input-background: #252525;
   --switch-border: #808080;
   --switch-inner-background: #eee;
   --tooltip-background: #000;
